# structured_output

./: .gitignore  pyproject.toml
src/structured_output/: categorie_abbigliamento.py  process_documents.py
