[project]
name = "structured-output"
version = "0.1.0"
description = ""
authors = [
    {name = "Felice Favia",email = "felicefavia56@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openai (>=2.41.0,<3.0.0)",
    "ipython (>=9.14.1,<10.0.0)"
]

[tool.poetry]
packages = [{include = "structured_output", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
